🚀 MAJOR UPDATE: Enhanced Alert System
✨ NEW FEATURES:
• Advanced multi-layered alert system
• Customizable notification settings (7 types of alerts)
• Prominent alert overlay with animations
• Icon flashing with badge notifications
• Configurable alert intensity (low/medium/high)
• Sound customization with Web Audio API
• Vibration support for mobile devices
• Smart notification repetition system
• Browser native alerts (optional)
• Auto-sidebar opening with user gesture handling

🔧 TECHNICAL IMPROVEMENTS:
• Enhanced AlertManager class with full configurability
• Modular architecture (AlertManager + TimerManager + PomodoroBackground)
• Robust user gesture handling for sidebar auto-opening
• Duplicate notification prevention system
• Responsive alert configuration UI
• Advanced CSS animations and transitions
• Progressive enhancement for device capabilities

📱 USER EXPERIENCE:
• Never miss a session end/start again
• Fully customizable alert experience
• Elegant configuration interface
• Test functionality for all alert types
• Smart defaults with expert customization options
• Accessibility-focused design

🛠️ DEVELOPER FEATURES:
• Chrome Manifest V3 compliance
• Updated permissions for scripting API
• Comprehensive error handling
• Modern ES6+ JavaScript architecture
• Extensive documentation updates

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
     "storage",
     "alarms",
     "notifications",
-    "sidePanel"
+    "sidePanel",
+    "activeTab",
+    "scripting"
   ],
   
   "background": {
